--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -133,6 +132,7 @@ allow 139.180.187.117;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.95.59.93;
+allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
@@ -157,6 +157,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -174,6 +175,7 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
+allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -238,6 +240,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.213.249.20;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -288,6 +291,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -694,6 +698,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1006,6 +1011,7 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1577,6 +1583,7 @@ allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
+allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1638,7 +1645,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
-allow 44.213.140.163;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1824,7 +1830,6 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.55.67.44;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.251;
@@ -1920,8 +1925,6 @@ allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.37;
 allow 94.177.106.46;
-allow 94.177.106.54;
-allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
