--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -680,6 +681,7 @@ allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
+allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
