--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -21,7 +20,6 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
-allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
@@ -44,7 +42,6 @@ allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.167;
-allow 107.189.1.175;
 allow 107.189.1.198;
 allow 107.189.12.3;
 allow 107.189.12.88;
@@ -157,6 +154,7 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -695,6 +693,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -961,7 +960,6 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
-allow 23.137.253.9;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -995,7 +993,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -1020,7 +1017,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1034,7 +1030,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -1129,10 +1124,8 @@ allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
-allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
-allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1626,7 +1619,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.170.180.181;
+allow 35.215.197.214;
 allow 37.114.37.81;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1738,6 +1731,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1768,6 +1762,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.156.198.116;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1832,6 +1827,8 @@ allow 82.153.138.208;
 allow 82.153.138.24;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
+allow 82.55.67.44;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
