--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -154,9 +155,9 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -693,7 +694,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -1579,6 +1579,7 @@ set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
+set_real_ip_from 2a0f:85c1:356:bb20::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1618,6 +1619,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.215.104.1;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.215.197.214;
 set_real_ip_from 37.114.37.81;
@@ -1706,6 +1708,7 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.195.220.118;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1762,7 +1765,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.156.198.116;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1783,6 +1785,7 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.226.89.91;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
+set_real_ip_from 66.78.40.102;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
@@ -1809,7 +1812,6 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.238.11;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1828,7 +1830,6 @@ set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.55.67.44;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
@@ -1931,9 +1932,6 @@ set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
-set_real_ip_from 94.24.109.10;
-set_real_ip_from 94.24.109.20;
-set_real_ip_from 94.24.109.30;
 set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
@@ -1942,6 +1940,7 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 95.245.158.2;
 set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.27.198.133;
 set_real_ip_from 96.66.15.152;
