--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -155,9 +155,9 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -694,6 +694,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1003,7 +1004,6 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1619,9 +1619,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.215.104.1;
 allow 35.0.127.52;
-allow 35.215.197.214;
 allow 37.114.37.81;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1761,6 +1759,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.7.143.71;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
